--- a/src/app/modules/registration/registration/registration.component.scss
+++ b/src/app/modules/registration/registration/registration.component.scss
@@ -1,103 +1,1 @@
-// login.component.scss
-
-@import '../../../../styles/shared-styles.scss';
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-
-  .label-container {
-    margin: 10px;
-  }
-
-  .registration-form {
-    @include form-container;
-    text-align: left;
-    background-color: #ffff;
-
-    .form-group {
-      margin-top: var(--padding);
-
-      label {
-        display: block;
-        font-weight: bold;
-        margin-bottom: 5px;
-      }
-
-      input {
-        @include input-styles;
-      }
-
-      .password-container {
-        position: relative;
-        width: 100%;
-      }
-
-      .password-container input {
-        width: 100%;
-        padding-right: 30px;
-      }
-
-      .password-container .toggle-password {
-        position: absolute;
-        right: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-        cursor: pointer;
-        color: #aaa;
-      }
-
-      .password-container .toggle-password:hover {
-        color: #000;
-      }
-    }
-
-    button {
-      @include primary-button;
-      padding: 10px;
-      font-size: 1rem;
-    }
-
-    .login-link {
-      margin-top: var(--padding);
-      text-align: center;
-
-      p {
-        margin-bottom: 5px;
-      }
-    }
-  }
-
-  @include respond-to(small) {
-    .registration-form {
-      max-width: 350px;
-    }
-  }
-
-  @include respond-to(medium) {
-    .registration-form {
-      max-width: 400px;
-    }
-  }
-
-  @include respond-to(large) {
-    .registration-form {
-      max-width: 450px;
-    }
-  }
-
-  @include respond-to(xlarge) {
-    .registration-form {
-      max-width: 500px;
-    }
-  }
-
-  @include respond-to(xxlarge) {
-    .registration-form {
-      max-width: 550px;
-    }
-  }
-}
+@import '../../../../styles/form-styles.scss';
