--- a/src/app/modules/category-overview/category-overview.component.html
+++ b/src/app/modules/category-overview/category-overview.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
   <div class="content">
     <div class="table-header">
-      Категории
+      <p class="table-label">Категории</p>
     </div>
     <div class="table-body">
       <table class="table table-striped">
@@ -18,11 +18,11 @@
             <td>{{ resolveTransactionType(category.typeId) }}</td>
             <td>
               <div class="action-buttons">
-                <button type="button" (click)="deleteCategory(category.id)">
-                  <i class="fa fa-trash"></i>
-                </button>
                 <button type="button" (click)="updateCategory(category.id)">
                   <i class="fa fa-edit"></i>
+                </button>
+                <button type="button" (click)="deleteCategory(category.id)">
+                  <i class="fa fa-trash"></i>
                 </button>
               </div>
             </td>
