--- a/src/app/modules/limit-overview/limit-overview.component.html
+++ b/src/app/modules/limit-overview/limit-overview.component.html
@@ -2,7 +2,7 @@
 <div class="container mt-4">
     <div class="content">
         <div class="table-header">
-            Лимиты
+            <p class="table-label">Лимиты</p>
         </div>
         <div class="table-body">
 
@@ -22,11 +22,11 @@
                         <td>{{ limit.startDay }}</td>
                         <td>
                             <div class="action-buttons">
-                                <button type="button" (click)="deleteLimit(limit.id)">
-                                    <i class="fa fa-trash"></i>
-                                </button>
                                 <button type="button" (click)="updateLimit(limit.id)">
                                     <i class="fa fa-edit"></i>
+                                </button>
+                                <button type="button" (click)="deleteLimit(limit.id)">
+                                    <i class="fa fa-trash"></i>
                                 </button>
                             </div>
                         </td>
