--- a/src/app/modules/registration/registration/registration.component.html
+++ b/src/app/modules/registration/registration/registration.component.html
@@ -1,22 +1,12 @@
 <div class="container">
-  <div class="label-container">
-    <h2>Регистрация</h2>
-  </div>
-
   <div *ngIf="successMessage" class="alert alert-success" role="alert">
     {{ successMessage }}
   </div>
 
-  <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
-    {{ errorMessage }}
-  </div>
-
-  <div *ngIf="!passwordsMatch()" class="alert alert-danger" role="alert">
-    Пароли не совпадают
-  </div>
-
-  <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" class="registration-form" novalidate>
-
+  <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" novalidate>
+    <div class="label-container">
+      <h2>Регистрация</h2>
+    </div>
     <div class="form-group">
       <label for="firstname">Имя</label>
       <input type="text" id="firstname" formControlName="firstname" placeholder="Введите ваше имя">
@@ -65,11 +55,19 @@
       </div>
     </div>
 
+    <div *ngIf="!passwordsMatch()" class="alert alert-danger" role="alert">
+      Пароли не совпадают
+    </div>
+
     <button type="submit" [disabled]="registrationForm.invalid" class="primary-button">Зарегистрироваться</button>
 
-    <div class="login-link">
+    <div class="link">
       <p>Уже есть аккаунт?</p>
-      <a routerLink="/login" class="link">Войти</a>
+      <a routerLink="/login">Войти</a>
+    </div>
+
+    <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
+      {{ errorMessage }}
     </div>
   </form>
 </div>
