fix bugs in financial goal form, refactor overview for goals, adjzst styles

--- a/src/app/modules/card/card.component.scss
+++ b/src/app/modules/card/card.component.scss
@@ -24,11 +24,19 @@
 }
 
 .title {
-    font-size: bold;
+    padding: 10px;
+    font-size: 2rem;
+    text-align: center;
+    color: var(--text-color);
 }
 
 .content {
     flex-grow: 1;
+}
+
+.description {
+    text-align: center;
+    padding: 10px;
 }
 
 .image-container {
