--- a/src/app/modules/category-overview/category-overview.component.html
+++ b/src/app/modules/category-overview/category-overview.component.html
@@ -3,34 +3,36 @@
     <div class="table-header">
       <p class="table-label">Категории</p>
     </div>
-    <div class="table-body">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Название категории</th>
-            <th>Тип категории</th>
-            <th>Действия</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let category of categories">
-            <td>{{ category.name }}</td>
-            <td>{{ resolveTransactionType(category.typeId) }}</td>
-            <td>
-              <div class="action-buttons">
-                <button type="button" (click)="updateCategory(category.id)">
-                  <i class="fa fa-edit"></i>
-                </button>
-                <button type="button" (click)="deleteCategory(category.id)">
-                  <i class="fa fa-trash"></i>
-                </button>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <div *ngIf="categories.length === 0" class="empty-list-message">
-        Нет доступных категорий.
+    <div class="table-responsive">
+      <div class="table-body">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Название категории</th>
+              <th>Тип категории</th>
+              <th>Действия</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let category of categories">
+              <td>{{ category.name }}</td>
+              <td>{{ resolveTransactionType(category.typeId) }}</td>
+              <td>
+                <div class="action-buttons">
+                  <button type="button" (click)="updateCategory(category.id)">
+                    <i class="fa fa-edit"></i>
+                  </button>
+                  <button type="button" (click)="deleteCategory(category.id)">
+                    <i class="fa fa-trash"></i>
+                  </button>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div *ngIf="categories.length === 0" class="empty-list-message">
+          Нет доступных категорий.
+        </div>
       </div>
     </div>
   </div>
