--- a/src/app/modules/limit-overview/limit-overview.component.html
+++ b/src/app/modules/limit-overview/limit-overview.component.html
@@ -4,38 +4,39 @@
         <div class="table-header">
             <p class="table-label">Лимиты</p>
         </div>
-        <div class="table-body">
+        <div class="table-responsive">
+            <div class="table-body">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Название категории</th>
+                            <th>Сумма</th>
+                            <th>День отсчета</th>
+                            <th>Действия</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let limit of limits">
+                            <td>{{ getCategoryName(limit.categoryId) }}</td>
+                            <td>{{ limit.amount | currency:'RUB ':'symbol' }}</td>
+                            <td>{{ limit.startDay }}</td>
+                            <td>
+                                <div class="action-buttons">
+                                    <button type="button" (click)="updateLimit(limit.id)">
+                                        <i class="fa fa-edit"></i>
+                                    </button>
+                                    <button type="button" (click)="deleteLimit(limit.id)">
+                                        <i class="fa fa-trash"></i>
+                                    </button>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
 
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Название категории</th>
-                        <th>Сумма</th>
-                        <th>День отсчета</th>
-                        <th>Действия</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let limit of limits">
-                        <td>{{ getCategoryName(limit.categoryId) }}</td>
-                        <td>{{ limit.amount | currency:'RUB ':'symbol' }}</td>
-                        <td>{{ limit.startDay }}</td>
-                        <td>
-                            <div class="action-buttons">
-                                <button type="button" (click)="updateLimit(limit.id)">
-                                    <i class="fa fa-edit"></i>
-                                </button>
-                                <button type="button" (click)="deleteLimit(limit.id)">
-                                    <i class="fa fa-trash"></i>
-                                </button>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <div *ngIf="limits.length === 0" class="empty-list-message">
-                Нет доступных лимитов.
+                <div *ngIf="limits.length === 0" class="empty-list-message">
+                    Нет доступных лимитов.
+                </div>
             </div>
         </div>
     </div>
