--- a/src/app/modules/savings-progress/savings-progress.component.scss
+++ b/src/app/modules/savings-progress/savings-progress.component.scss
@@ -1,19 +1,93 @@
 .goal-item {
     margin-bottom: 20px;
+    border-radius: 8px;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+}
+
+.goal-label-details-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    /* Add space between label/details and progress bar */
+}
+
+.goal-label {
+    flex: 1;
+}
+
+.goal-details {
+    flex: 1;
+    text-align: right;
+    /* Align end date to the right */
+}
+
+.divider {
+    border: none;
+    border-top: 1px solid #ccc;
+    width: 100%;
+}
+
+.progress-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .progress {
-    height: 20px;
+    height: 30px;
+    width: 75%;
     background-color: #d8d8d8;
     border-radius: 4px;
     overflow: hidden;
+    position: relative; /* Ensure relative positioning */
 }
+
 
 .progress-bar {
     height: 100%;
-    line-height: 20px;
     color: #fff;
     text-align: center;
     background-color: #B58FA4;
     transition: width 0.6s ease;
+}
+
+.progress-text {
+    position: absolute; /* Use absolute positioning */
+    top: 50%; /* Center vertically */
+    left: 50%; /* Center horizontally */
+    transform: translate(-50%, -50%); /* Center the text */
+    color: black;
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+.delete-button-container {
+    margin-left: 10px;
+    /* Adjust margin as needed */
+}
+
+.delete-button-container button {
+    height: 100%;
+}
+
+.end-date {
+    margin-right: 0;
+    /* Remove margin from end date */
+}
+
+.no-goals-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 20px;
+    border: 2px dashed #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
