--- a/src/styles/table-styles.scss
+++ b/src/styles/table-styles.scss
@@ -1,7 +1,9 @@
-@import '../styles/';
+@import '../styles/shared-styles.scss';
+
 
 .container {
     @include container-styles;
+    border-radius: 0.25rem;
 }
 
 .content {
@@ -9,10 +11,13 @@
     border-radius: 0.25rem;
 }
 
+.table-responsive {
+    overflow-x: auto;
+}
+
 .table-header {
     background-color: var(--primary-color);
-    padding: 0.75rem 1.25rem;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+    padding: 5px;
 }
 
 .table-label {
