adjust transaction analyse charts, text on the startpage, refactoring

--- a/src/app/modules/financial-goal-overview/financial-goal-overview.component.scss
+++ b/src/app/modules/financial-goal-overview/financial-goal-overview.component.scss
@@ -2,15 +2,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;  
 }
 
 .top-row {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;  
     width: 100%;
+    margin-bottom: 20px; 
 }
 
 .bottom-row {
+    display: flex;
+    justify-content: center;  
     width: 100%;
 }
 
