--- a/src/app/modules/savings-progress/savings-progress.component.scss
+++ b/src/app/modules/savings-progress/savings-progress.component.scss
@@ -1,11 +1,12 @@
 .goal-item {
-    margin-bottom: 20px;
+    margin: 20px;
     border-radius: 8px;
     padding: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
     display: flex;
     flex-direction: column;
+    background-color:  rgba(255, 255, 255, 0.3);
 }
 
 .goal-label-details-container {
