--- a/src/app/modules/transaction-analysis/transaction-analysis.component.html
+++ b/src/app/modules/transaction-analysis/transaction-analysis.component.html
@@ -1,10 +1,16 @@
-<div class="transaction-analysis-container">
-    <div class="long-container">
+<div class="transaction-analysis">
+    <div class="chart-container">
         <app-barchart></app-barchart>
     </div>
-    <div class="long-container">
+</div>
+
+<div class="transaction-analysis">
+    <div class="chart-container">
         <app-line-chart></app-line-chart>
     </div>
-
-    <doughnut-chart-card></doughnut-chart-card>
 </div>
+
+
+<!-- <div class="doughnut-chart-container">
+    <doughnut-chart-card></doughnut-chart-card>
+</div> -->
