--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
           <a class="dropdown-item link" routerLink="/transaction">Создать</a>
           <!-- <a class="dropdown-item link" routerLink="/upload">Загрузить из банка</a> -->
           <a class="dropdown-item link" routerLink="/transaction-overview">Обзор</a>
-          <a class="dropdown-item link" routerLink="/app-transaction-analysis">Анализ</a>
+          <a class="dropdown-item link" routerLink="/transaction-analysis">Анализ</a>
         </div>
       </li>
       <!-- <li class="nav-item" *ngIf="isLoggedIn()">
