--- a/src/app/modules/barchart/barchart.component.html
+++ b/src/app/modules/barchart/barchart.component.html
@@ -1,14 +1,16 @@
-<!-- bar chart component html -->
-<div class="year-selector">
-  <div class="arrow-left" (click)="switchYear(displayedYear - 1)">
-    <i class="bi bi-arrow-left"></i>
+<div class="chart-responsive">
+  <div class="year-selector">
+    <div class="arrow-left" (click)="switchYear(displayedYear - 1)">
+      <i class="bi bi-arrow-left"></i>
+    </div>
+    <span>{{ displayedYear }}</span>
+    <div class="arrow-right" (click)="switchYear(displayedYear + 1)">
+      <i class="bi bi-arrow-right"></i>
+    </div>
   </div>
-  <span>{{ displayedYear }}</span>
-  <div class="arrow-right" (click)="switchYear(displayedYear + 1)">
-    <i class="bi bi-arrow-right"></i>
+  <div class="chart-container">
+    <div class="chart-wrapper">
+      <canvas id="MyBarChart" class="chart">{{ barchart }}</canvas>
+    </div>
   </div>
-</div>
-<div class="chart-container">
-  <canvas id="MyBarChart" class="chart" *ngIf="!showNoTransactionsMessage">{{ barchart }}</canvas>
-  <div class="no-transactions-message" *ngIf="showNoTransactionsMessage">No data available for the selected year.</div>
 </div>
