--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -25,7 +25,7 @@
           Транзакции
         </a>
         <div class="dropdown-menu" aria-labelledby="transactionsDropdown">
-          <a class="dropdown-item link" routerLink="/transaction">Создать</a>
+          <a class="dropdown-item link" routerLink="/transaction-form">Создать</a>
           <!-- <a class="dropdown-item link" routerLink="/upload">Загрузить из банка</a> -->
           <a class="dropdown-item link" routerLink="/transaction-overview">Обзор</a>
           <a class="dropdown-item link" routerLink="/transaction-analysis">Анализ</a>
@@ -40,7 +40,7 @@
           Накопления
         </a>
         <div class="dropdown-menu" aria-labelledby="goalsDropdown">
-          <a class="dropdown-item link" routerLink="/create-goal">Создать</a>
+          <a class="dropdown-item link" routerLink="/goal-form">Создать</a>
           <a class="dropdown-item link" routerLink="/financial-goal-overview">Обзор</a>
         </div>
       </li>
