--- a/src/styles/table-styles.scss
+++ b/src/styles/table-styles.scss
@@ -22,7 +22,8 @@
 
 .table-label {
     font-size: 1.3em;
-    text-align: left;
+    text-align: center;
+    font-weight: bold;
     margin: 10px;
     color: var(--text-color);
 }
