--- a/src/app/modules/financial-goals/savings-progress/savings-progress.component.html
+++ b/src/app/modules/financial-goals/savings-progress/savings-progress.component.html
@@ -14,7 +14,7 @@
     </div>
     <hr class="divider">
     <div class="progress-container">
-        <div class="progress" style="height: 30px;">
+        <div class="progress">
             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                 [style.width.%]="calculateProgressPercentage(goal)" aria-valuemin="0" aria-valuemax="100">
                 <span class="progress-text">
