--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -40,7 +40,7 @@
           Накопления
         </a>
         <div class="dropdown-menu" aria-labelledby="goalsDropdown">
-          <a class="dropdown-item link" routerLink="/goal-form">Создать</a>
+          <a class="dropdown-item link" routerLink="/financial-goal-form">Создать</a>
           <a class="dropdown-item link" routerLink="/financial-goal-overview">Обзор</a>
         </div>
       </li>
